--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hkh.korealocal114"
-    android:versionCode="10"
-    android:versionName="v1.02" >
+    android:versionCode="11"
+    android:versionName="v1.03" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -53,6 +53,9 @@
             android:label="@string/action_write">
         </activity>
         
+        <activity android:name="com.purplebrain.adbuddiz.sdk.AdBuddizActivity" 
+            android:theme="@android:style/Theme.Translucent" />
+                
         <activity
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
